# niu-code-1142-project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Dockerfile  PROJECT.md  README.md  SOP_IMPROVEMENTS.md  SPEC.md  TALK.md  agents.md  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  project.md  start-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  deps.py  main.py  schemas.py
backend/app/models/: __init__.py  _helpers.py  agent_tool_call.py  chat_message.py  database.py  document.py  generated_file.py  learning_session.py  limitation.py  progress_event.py  reference.py  session.py  system_setting.py  system_setting_history.py  tables.py  task.py  uploaded_file.py  user.py
backend/app/prompts/: flashcard_generate.yaml  mindmap.yaml  mindmap_expand.yaml  mindmap_tree.yaml  ocr.yaml  quiz_generate.yaml  rag_chat.yaml  rag_socratic.yaml  rag_strict.yaml  summary_bullets.yaml  summary_full.yaml
backend/app/routers/: admin.py  auth.py  chat.py  courses.py  documents.py  downloads.py  events.py  flashcards.py  generation.py  goals.py  history.py  legal.py  mindmap.py  notes.py  quiz.py  sessions.py  summary.py  tasks.py
backend/app/services/: admin_service.py  agent_runtime.py  ai_service.py  audit_service.py  auth_service.py  chat_service.py  chroma_service.py  chunker.py  converter.py  cost_service.py  courses_service.py  direction_service.py  document_access.py  document_service.py  export_service.py  file_parser_service.py  generation_service.py  goals_service.py  health_service.py  json_utils.py  learning_service.py  legal_service.py  llm_client.py  llm_config.py  mindmap_tree_service.py  notes_service.py  ocr_service.py  privacy_service.py  progress_service.py  prompt_loader.py  rag_service.py  security.py  storage.py  system_setting_service.py  task_service.py  ws_manager.py
backend/app/tasks/: celery_app.py  document_tasks.py  generation_tasks.py  maintenance_tasks.py
backend/app/tools/: _helpers.py  annotate.py  finish.py  read_inputs.py  registry.py  write_files.py
backend/app/utils/: file_parsers.py  file_utils.py  security.py  validators.py
backend/static/: index.html
backend/static/assets/: index-4PQlzzdc.js  index-BjTYEyc5.js  index-CCC2B8hZ.css  index-KhPT7-Uj.css
backend/tests/: test_chunker_json.py  test_courses_service.py  test_learning_helpers.py  test_learning_service.py  test_llm_config.py
(+80 files in other folders)
