[project]
name = "niu-ai-backend"
version = "0.1.0"
description = "AI 課業輔助與作業草稿生成系統 - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "openai>=1.50.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "reportlab>=4.2.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
