[project]
name = "notebooklm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "python-multipart>=0.0.12",
    "PyMuPDF>=1.24.0",
    "pymupdf4llm>=1.27.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.8.0",
    "openai>=1.54.0",
    "chromadb>=0.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
