[project]
name = "learnai-backend"
version = "0.1.0"
description = "LearnAI FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "bcrypt>=4.1.3",
  "celery[redis]>=5.4.0",
  "chromadb>=0.5.5",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "filelock>=3.15.4",
  "openai>=1.40.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "pymupdf>=1.24.7",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.31",
  "uvicorn[standard]>=0.30.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
